feat: complete project scaffolding with documentation and validation
This commit completes the comprehensive project scaffolding for Wasmtime4j,
providing a production-ready foundation for Java WebAssembly runtime development.

Key Components Completed:
- Complete Maven multi-module project structure
- Public API interfaces with comprehensive documentation
- JNI and Panama FFI implementation structures
- Shared native library foundation
- JMH benchmark framework with example benchmarks
- Integration test framework
- Quality tools integration (Checkstyle, Spotless, SpotBugs, PMD, JaCoCo)
- Comprehensive documentation (README.md, CONTRIBUTING.md)
- Working code examples demonstrating API usage
- Cross-platform build support

Build System Validation:
- mvnw clean compile: SUCCESS ✅
- mvnw test: SUCCESS ✅ (empty test suites initially)
- mvnw clean package: SUCCESS ✅
- Quality tools operational: Checkstyle ✅, Spotless ✅, SpotBugs ⚠️ (Java 23 compatibility)

Architecture Features:
- Dual implementation strategy (JNI for Java 8-22, Panama for Java 23+)
- Automatic runtime selection based on Java version
- Defensive programming with comprehensive error handling
- Resource management with proper cleanup patterns
- Unified API abstracting implementation details
- Factory-based loading with no direct dependencies

Documentation and Examples:
- Comprehensive README with setup instructions and usage examples
- CONTRIBUTING.md with development guidelines and coding standards
- HelloWasm.java basic usage example
- RuntimeComparison.java advanced example comparing implementations
- Full API documentation and troubleshooting guide

The project is now ready for the next phase: actual Wasmtime integration
and implementation of native bindings. All scaffolding is production-ready
with proper quality controls and comprehensive documentation.