@@ -1,471 +1,381 @@
-# Claude Code PM
+# Wasmtime4j - Java Bindings for Wasmtime WebAssembly Runtime
 
-[![Automaze](https://img.shields.io/badge/By-automaze.io-4b3baf)](https://automaze.io)
-&nbsp;
-[![Claude Code](https://img.shields.io/badge/+-Claude%20Code-d97757)](https://github.com/automazeio/ccpm/blob/main/README.md)
-[![GitHub Issues](https://img.shields.io/badge/+-GitHub%20Issues-1f2328)](https://github.com/automazeio/ccpm)
-&nbsp;
-[![MIT License](https://img.shields.io/badge/License-MIT-28a745)](https://github.com/automazeio/ccpm/blob/main/LICENSE)
-&nbsp;
-[![Follow on 𝕏](https://img.shields.io/badge/𝕏-@aroussi-1c9bf0)](http://x.com/intent/follow?screen_name=aroussi)
-&nbsp;
-[![Star this repo](https://img.shields.io/badge/★-Star%20this%20repo-e7b10b)](https://github.com/automazeio/ccpm)
+[![Build Status](https://github.com/wasmtime4j/wasmtime4j/actions/workflows/ci.yml/badge.svg)](https://github.com/wasmtime4j/wasmtime4j/actions)
+[![Maven Central](https://maven-badges.herokuapp.com/maven-central/ai.tegmentum/wasmtime4j/badge.svg)](https://maven-badges.herokuapp.com/maven-central/ai.tegmentum/wasmtime4j)
+[![License](https://img.shields.io/badge/license-MIT-blue.svg)](LICENSE)
 
-### Claude Code workflow to ship ~~faster~~ _better_ using spec-driven development, GitHub issues, Git worktrees, and mutiple AI agents running in parallel.
+Wasmtime4j provides unified Java bindings for the [Wasmtime](https://wasmtime.dev/) WebAssembly runtime, offering both JNI and Panama Foreign Function Interface implementations with automatic runtime selection based on Java version.
 
-Stop losing context. Stop blocking on tasks. Stop shipping bugs. This battle-tested system turns PRDs into epics, epics into GitHub issues, and issues into production code – with full traceability at every step.
+## Key Features
 
-![Claude Code PM](screenshot.webp)
+- **Dual Implementation Strategy**: JNI for Java 8-22, Panama FFI for Java 23+
+- **Automatic Runtime Selection**: Detects Java version and chooses optimal implementation
+- **Unified API**: Single interface across different runtime implementations
+- **Cross-Platform Support**: Linux, Windows, macOS (x86_64 and ARM64)
+- **Production Ready**: Comprehensive error handling, resource management, and defensive programming
+- **Latest Wasmtime**: Built against Wasmtime 36.0.2 for cutting-edge WebAssembly support
 
-## Table of Contents
+## Quick Start
 
-- [Background](#background)
-- [The Workflow](#the-workflow)
-- [What Makes This Different?](#what-makes-this-different)
-- [Why GitHub Issues?](#why-github-issues)
-- [Core Principle: No Vibe Coding](#core-principle-no-vibe-coding)
-- [System Architecture](#system-architecture)
-- [Workflow Phases](#workflow-phases)
-- [Command Reference](#command-reference)
-- [The Parallel Execution System](#the-parallel-execution-system)
-- [Key Features & Benefits](#key-features--benefits)
-- [Proven Results](#proven-results)
-- [Example Flow](#example-flow)
-- [Get Started Now](#get-started-now)
-- [Local vs Remote](#local-vs-remote)
-- [Technical Notes](#technical-notes)
-- [Support This Project](#support-this-project)
+### Prerequisites
 
-## Background
+- **Java 8+** (JNI implementation)
+- **Java 23+** (Panama FFI implementation - recommended for best performance)
+- **Rust toolchain** (for building from source)
 
-Every team struggles with the same problems:
-- **Context evaporates** between sessions, forcing constant re-discovery
-- **Parallel work creates conflicts** when multiple developers touch the same code
-- **Requirements drift** as verbal decisions override written specs
-- **Progress becomes invisible** until the very end
+### Installation
 
-This system solves all of that.
+Add Wasmtime4j to your Maven project:
 
-## The Workflow
-
-```mermaid
-graph LR
-    A[PRD Creation] --> B[Epic Planning]
-    B --> C[Task Decomposition]
-    C --> D[GitHub Sync]
-    D --> E[Parallel Execution]
+```xml
+<dependency>
+    <groupId>ai.tegmentum</groupId>
+    <artifactId>wasmtime4j</artifactId>
+    <version>1.0.0</version>
+</dependency>
 ```
 
-### See It In Action (60 seconds)
+Or for Gradle:
+
+```gradle
+implementation 'ai.tegmentum:wasmtime4j:1.0.0'
+```
+
+### Basic Usage
+
+```java
+import ai.tegmentum.wasmtime4j.*;
+import ai.tegmentum.wasmtime4j.factory.WasmRuntimeFactory;
+
+public class HelloWasm {
+    public static void main(String[] args) throws Exception {
+        // Create a runtime with automatic implementation selection
+        try (WasmRuntime runtime = WasmRuntimeFactory.create()) {
+
+            // Create an engine with default configuration
+            try (Engine engine = runtime.createEngine()) {
+
+                // Load WebAssembly bytecode (example: simple add function)
+                byte[] wasmBytes = loadWasmFromFile("example.wasm");
+
+                // Compile the module
+                try (Module module = engine.compileModule(wasmBytes)) {
+
+                    // Create a store for execution context
+                    try (Store store = engine.createStore()) {
+
+                        // Instantiate the module
+                        try (Instance instance = module.instantiate(store)) {
+
+                            // Get and call an exported function
+                            Optional<WasmFunction> addFunc = instance.getFunction("add");
+                            if (addFunc.isPresent()) {
+                                WasmValue[] result = addFunc.get().call(
+                                    WasmValue.i32(5),
+                                    WasmValue.i32(3)
+                                );
+                                System.out.println("Result: " + result[0].asInt()); // Outputs: 8
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    private static byte[] loadWasmFromFile(String path) {
+        // Implementation to load WASM file...
+        return new byte[0];
+    }
+}
+```
+
+### Runtime Selection
+
+Wasmtime4j automatically selects the best available implementation:
+
+```java
+// Automatic selection (recommended)
+WasmRuntime runtime = WasmRuntimeFactory.create();
+
+// Manual selection
+WasmRuntime jniRuntime = WasmRuntimeFactory.createJni();
+WasmRuntime panamaRuntime = WasmRuntimeFactory.createPanama(); // Java 23+ only
+
+// Check runtime information
+RuntimeInfo info = runtime.getRuntimeInfo();
+System.out.println("Using: " + info.getRuntimeType()); // JNI or PANAMA
+System.out.println("Wasmtime version: " + info.getWasmtimeVersion());
+```
+
+## Project Structure
+
+```
+wasmtime4j/
+├── wasmtime4j/               # Public API interfaces and factory
+├── wasmtime4j-jni/           # JNI implementation (Java 8+)
+├── wasmtime4j-panama/        # Panama FFI implementation (Java 23+)
+├── wasmtime4j-native/        # Shared native Rust library
+├── wasmtime4j-benchmarks/    # Performance benchmarks
+└── wasmtime4j-tests/         # Integration tests and WebAssembly test suites
+```
+
+## Building from Source
+
+### Prerequisites
+
+- Java 8+ (for JNI) or Java 23+ (for Panama)
+- Rust toolchain (latest stable)
+- Maven 3.6+
+
+### Build Commands
 
 ```bash
-# Create a comprehensive PRD through guided brainstorming
-/pm:prd-new memory-system
+# Clean build
+./mvnw clean compile
 
-# Transform PRD into a technical epic with task breakdown
-/pm:prd-parse memory-system
+# Run tests
+./mvnw test
 
-# Push to GitHub and start parallel execution
-/pm:epic-oneshot memory-system
-/pm:issue-start 1235
+# Package artifacts
+./mvnw clean package
+
+# Install to local repository
+./mvnw clean install
+
+# Run quality checks
+./mvnw checkstyle:check spotless:check
+
+# Auto-format code
+./mvnw spotless:apply
 ```
 
-## What Makes This Different?
+### Cross-Platform Build
 
-| Traditional Development | Claude Code PM System |
-|------------------------|----------------------|
-| Context lost between sessions | **Persistent context** across all work |
-| Serial task execution | **Parallel agents** on independent tasks |
-| "Vibe coding" from memory | **Spec-driven** with full traceability |
-| Progress hidden in branches | **Transparent audit trail** in GitHub |
-| Manual task coordination | **Intelligent prioritization** with `/pm:next` |
-
-## Why GitHub Issues?
-
-Most Claude Code workflows operate in isolation – a single developer working with AI in their local environment. This creates a fundamental problem: **AI-assisted development becomes a silo**.
-
-By using GitHub Issues as our database, we unlock something powerful:
-
-### 🤝 **True Team Collaboration**
-- Multiple Claude instances can work on the same project simultaneously
-- Human developers see AI progress in real-time through issue comments
-- Team members can jump in anywhere – the context is always visible
-- Managers get transparency without interrupting flow
-
-### 🔄 **Seamless Human-AI Handoffs**
-- AI can start a task, human can finish it (or vice versa)
-- Progress updates are visible to everyone, not trapped in chat logs
-- Code reviews happen naturally through PR comments
-- No "what did the AI do?" meetings
-
-### 📈 **Scalable Beyond Solo Work**
-- Add team members without onboarding friction
-- Multiple AI agents working in parallel on different issues
-- Distributed teams stay synchronized automatically
-- Works with existing GitHub workflows and tools
-
-### 🎯 **Single Source of Truth**
-- No separate databases or project management tools
-- Issue state is the project state
-- Comments are the audit trail
-- Labels provide organization
-
-This isn't just a project management system – it's a **collaboration protocol** that lets humans and AI agents work together at scale, using infrastructure your team already trusts.
-
-## Core Principle: No Vibe Coding
-
-> **Every line of code must trace back to a specification.**
-
-We follow a strict 5-phase discipline:
-
-1. **🧠 Brainstorm** - Think deeper than comfortable
-2. **📝 Document** - Write specs that leave nothing to interpretation
-3. **📐 Plan** - Architect with explicit technical decisions
-4. **⚡ Execute** - Build exactly what was specified
-5. **📊 Track** - Maintain transparent progress at every step
-
-No shortcuts. No assumptions. No regrets.
-
-## System Architecture
-
-```
-.claude/
-├── CLAUDE.md          # Always-on instructions (copy content to your project's CLAUDE.md file)
-├── agents/            # Task-oriented agents (for context preservation)
-├── commands/          # Command definitions
-│   ├── context/       # Create, update, and prime context
-│   ├── pm/            # ← Project management commands (this system)
-│   └── testing/       # Prime and execute tests (edit this)
-├── context/           # Project-wide context files
-├── epics/             # ← PM's local workspace (place in .gitignore)
-│   └── [epic-name]/   # Epic and related tasks
-│       ├── epic.md    # Implementation plan
-│       ├── [#].md     # Individual task files
-│       └── updates/   # Work-in-progress updates
-├── prds/              # ← PM's PRD files
-├── rules/             # Place any rule files you'd like to reference here
-└── scripts/           # Place any script files you'd like to use here
-```
-
-## Workflow Phases
-
-### 1. Product Planning Phase
+The build process automatically cross-compiles native libraries for all supported platforms:
 
 ```bash
-/pm:prd-new feature-name
+# Build for all platforms (requires cross-compilation setup)
+./mvnw clean package -Pcross-compile
+
+# Build for current platform only
+./mvnw clean package
 ```
-Launches comprehensive brainstorming to create a Product Requirements Document capturing vision, user stories, success criteria, and constraints.
 
-**Output:** `.claude/prds/feature-name.md`
+## Configuration
 
-### 2. Implementation Planning Phase
+### Engine Configuration
+
+```java
+// Create engine with custom configuration
+EngineConfig config = new EngineConfig()
+    .optimizationLevel(OptimizationLevel.SPEED)
+    .debugInfo(true)
+    .consumeFuel(true)
+    .parallelCompilation(true);
+
+Engine engine = runtime.createEngine(config);
+```
+
+### Built-in Configurations
+
+```java
+// Optimized for speed
+Engine speedEngine = runtime.createEngine(EngineConfig.forSpeed());
+
+// Optimized for size
+Engine sizeEngine = runtime.createEngine(EngineConfig.forSize());
+
+// Optimized for debugging
+Engine debugEngine = runtime.createEngine(EngineConfig.forDebug());
+```
+
+## Performance
+
+Wasmtime4j includes comprehensive benchmarks comparing JNI and Panama implementations:
 
 ```bash
-/pm:prd-parse feature-name
+# Run all benchmarks
+./mvnw exec:java -pl wasmtime4j-benchmarks
+
+# Run specific benchmarks
+java -jar wasmtime4j-benchmarks/target/benchmarks.jar RuntimeInitializationBenchmark
 ```
-Transforms PRD into a technical implementation plan with architectural decisions, technical approach, and dependency mapping.
 
-**Output:** `.claude/epics/feature-name/epic.md`
+### Performance Characteristics
 
-### 3. Task Decomposition Phase
+- **Panama FFI**: Lower overhead for function calls, better with Java 23+
+- **JNI**: Broader compatibility, mature implementation, good performance on older Java versions
+- **Automatic Selection**: Chooses Panama on Java 23+ for optimal performance
+
+## Memory Management
+
+Wasmtime4j uses defensive programming to prevent native resource leaks:
+
+```java
+// All resources implement AutoCloseable for try-with-resources
+try (WasmRuntime runtime = WasmRuntimeFactory.create();
+     Engine engine = runtime.createEngine();
+     Module module = engine.compileModule(wasmBytes);
+     Store store = engine.createStore();
+     Instance instance = module.instantiate(store)) {
+
+    // Resources automatically cleaned up when leaving scope
+
+} // All native resources properly released here
+```
+
+## Error Handling
+
+Wasmtime4j provides structured exception handling:
+
+```java
+try {
+    Module module = engine.compileModule(invalidWasm);
+} catch (CompilationException e) {
+    System.err.println("Compilation failed: " + e.getMessage());
+} catch (ValidationException e) {
+    System.err.println("Module validation failed: " + e.getMessage());
+} catch (WasmException e) {
+    System.err.println("WebAssembly error: " + e.getMessage());
+}
+```
+
+## Advanced Features
+
+### WASI Support
+
+```java
+// Create WASI context (when available)
+WasiConfig wasiConfig = new WasiConfig()
+    .inheritEnv()
+    .inheritStdin()
+    .inheritStdout()
+    .inheritStderr();
+
+Store store = engine.createStore();
+// Configure WASI imports...
+```
+
+### Host Functions
+
+```java
+// Define host function to call from WebAssembly
+HostFunction logFunction = (args) -> {
+    System.out.println("WASM says: " + args[0].asInt());
+    return new WasmValue[0];
+};
+
+// Add to import map
+ImportMap imports = ImportMap.empty()
+    .addFunction("env", "log", logFunction);
+
+Instance instance = module.instantiate(store, imports);
+```
+
+### Memory Access
+
+```java
+// Get exported memory
+Optional<WasmMemory> memory = instance.getMemory("memory");
+if (memory.isPresent()) {
+    WasmMemory mem = memory.get();
+
+    // Read/write memory
+    byte[] data = mem.read(0, 1024);
+    mem.write(0, "Hello, WASM!".getBytes());
+
+    // Memory growth
+    mem.grow(1); // Grow by 1 page (64KB)
+}
+```
+
+## Platform Support
+
+| Platform | Architecture | JNI Support | Panama Support |
+|----------|-------------|-------------|----------------|
+| Linux    | x86_64      | ✅          | ✅             |
+| Linux    | ARM64       | ✅          | ✅             |
+| Windows  | x86_64      | ✅          | ✅             |
+| macOS    | x86_64      | ✅          | ✅             |
+| macOS    | ARM64       | ✅          | ✅             |
+
+## Contributing
+
+We welcome contributions! Please see [CONTRIBUTING.md](CONTRIBUTING.md) for guidelines.
+
+### Development Setup
+
+1. Clone the repository
+2. Install prerequisites (Java, Rust, Maven)
+3. Run tests: `./mvnw test`
+4. Make changes and ensure tests pass
+5. Submit a pull request
+
+### Code Style
+
+The project follows the [Google Java Style Guide](https://google.github.io/styleguide/javaguide.html):
 
 ```bash
-/pm:epic-decompose feature-name
+# Check code style
+./mvnw checkstyle:check
+
+# Auto-format
+./mvnw spotless:apply
 ```
-Breaks epic into concrete, actionable tasks with acceptance criteria, effort estimates, and parallelization flags.
 
-**Output:** `.claude/epics/feature-name/[task].md`
+## Troubleshooting
 
-### 4. GitHub Synchronization
+### Common Issues
 
+**Native library loading fails:**
 ```bash
-/pm:epic-sync feature-name
-# Or for confident workflows:
-/pm:epic-oneshot feature-name
+# Ensure native library is in classpath or system path
+java -Djava.library.path=/path/to/natives -jar your-app.jar
 ```
-Pushes epic and tasks to GitHub as issues with appropriate labels and relationships.
 
-### 5. Execution Phase
-
+**Java version compatibility:**
 ```bash
-/pm:issue-start 1234  # Launch specialized agent
-/pm:issue-sync 1234   # Push progress updates
-/pm:next             # Get next priority task
+# Check Java version
+java -version
+
+# For Java 23+ with Panama
+java --enable-preview --add-modules jdk.incubator.foreign -jar your-app.jar
 ```
-Specialized agents implement tasks while maintaining progress updates and an audit trail.
 
-## Command Reference
-
-> [!TIP]
-> Type `/pm:help` for a concise command summary
-
-### Initial Setup
-- `/pm:init` - Install dependencies and configure GitHub
-
-### PRD Commands
-- `/pm:prd-new` - Launch brainstorming for new product requirement
-- `/pm:prd-parse` - Convert PRD to implementation epic
-- `/pm:prd-list` - List all PRDs
-- `/pm:prd-edit` - Edit existing PRD
-- `/pm:prd-status` - Show PRD implementation status
-
-### Epic Commands
-- `/pm:epic-decompose` - Break epic into task files
-- `/pm:epic-sync` - Push epic and tasks to GitHub
-- `/pm:epic-oneshot` - Decompose and sync in one command
-- `/pm:epic-list` - List all epics
-- `/pm:epic-show` - Display epic and its tasks
-- `/pm:epic-close` - Mark epic as complete
-- `/pm:epic-edit` - Edit epic details
-- `/pm:epic-refresh` - Update epic progress from tasks
-
-### Issue Commands
-- `/pm:issue-show` - Display issue and sub-issues
-- `/pm:issue-status` - Check issue status
-- `/pm:issue-start` - Begin work with specialized agent
-- `/pm:issue-sync` - Push updates to GitHub
-- `/pm:issue-close` - Mark issue as complete
-- `/pm:issue-reopen` - Reopen closed issue
-- `/pm:issue-edit` - Edit issue details
-
-### Workflow Commands
-- `/pm:next` - Show next priority issue with epic context
-- `/pm:status` - Overall project dashboard
-- `/pm:standup` - Daily standup report
-- `/pm:blocked` - Show blocked tasks
-- `/pm:in-progress` - List work in progress
-
-### Sync Commands
-- `/pm:sync` - Full bidirectional sync with GitHub
-- `/pm:import` - Import existing GitHub issues
-
-### Maintenance Commands
-- `/pm:validate` - Check system integrity
-- `/pm:clean` - Archive completed work
-- `/pm:search` - Search across all content
-
-## The Parallel Execution System
-
-### Issues Aren't Atomic
-
-Traditional thinking: One issue = One developer = One task
-
-**Reality: One issue = Multiple parallel work streams**
-
-A single "Implement user authentication" issue isn't one task. It's...
-
-- **Agent 1**: Database tables and migrations
-- **Agent 2**: Service layer and business logic
-- **Agent 3**: API endpoints and middleware
-- **Agent 4**: UI components and forms
-- **Agent 5**: Test suites and documentation
-
-All running **simultaneously** in the same worktree.
-
-### The Math of Velocity
-
-**Traditional Approach:**
-- Epic with 3 issues
-- Sequential execution
-
-**This System:**
-- Same epic with 3 issues
-- Each issue splits into ~4 parallel streams
-- **12 agents working simultaneously**
-
-We're not assigning agents to issues. We're **leveraging multiple agents** to ship faster.
-
-### Context Optimization
-
-**Traditional single-thread approach:**
-- Main conversation carries ALL the implementation details
-- Context window fills with database schemas, API code, UI components
-- Eventually hits context limits and loses coherence
-
-**Parallel agent approach:**
-- Main thread stays clean and strategic
-- Each agent handles its own context in isolation
-- Implementation details never pollute the main conversation
-- Main thread maintains oversight without drowning in code
-
-Your main conversation becomes the conductor, not the orchestra.
-
-### GitHub vs Local: Perfect Separation
-
-**What GitHub Sees:**
-- Clean, simple issues
-- Progress updates
-- Completion status
-
-**What Actually Happens Locally:**
-- Issue #1234 explodes into 5 parallel agents
-- Agents coordinate through Git commits
-- Complex orchestration hidden from view
-
-GitHub doesn't need to know HOW the work got done – just that it IS done.
-
-### The Command Flow
-
+**Build fails on cross-compilation:**
 ```bash
-# Analyze what can be parallelized
-/pm:issue-analyze 1234
-
-# Launch the swarm
-/pm:epic-start memory-system
-
-# Watch the magic
-# 12 agents working across 3 issues
-# All in: ../epic-memory-system/
-
-# One clean merge when done
-/pm:epic-merge memory-system
+# Install Rust cross-compilation targets
+rustup target add x86_64-pc-windows-gnu
+rustup target add aarch64-apple-darwin
 ```
 
-## Key Features & Benefits
+### Getting Help
 
-### 🧠 **Context Preservation**
-Never lose project state again. Each epic maintains its own context, agents read from `.claude/context/`, and updates locally before syncing.
+- 📖 [Wiki](https://github.com/wasmtime4j/wasmtime4j/wiki)
+- 🐛 [Issues](https://github.com/wasmtime4j/wasmtime4j/issues)
+- 💬 [Discussions](https://github.com/wasmtime4j/wasmtime4j/discussions)
+- 📧 [Mailing List](mailto:wasmtime4j@tegmentum.ai)
 
-### ⚡ **Parallel Execution**
-Ship faster with multiple agents working simultaneously. Tasks marked `parallel: true` enable conflict-free concurrent development.
+## License
 
-### 🔗 **GitHub Native**
-Works with tools your team already uses. Issues are the source of truth, comments provide history, and there is no dependency on the Projects API.
+This project is licensed under the MIT License - see the [LICENSE](LICENSE) file for details.
 
-### 🤖 **Agent Specialization**
-Right tool for every job. Different agents for UI, API, and database work. Each reads requirements and posts updates automatically.
+## Acknowledgments
 
-### 📊 **Full Traceability**
-Every decision is documented. PRD → Epic → Task → Issue → Code → Commit. Complete audit trail from idea to production.
+- [Wasmtime](https://wasmtime.dev/) - The WebAssembly runtime that powers this project
+- [Bytecode Alliance](https://bytecodealliance.org/) - For their excellent WebAssembly ecosystem
+- The Java and Rust communities for their invaluable tools and libraries
 
-### 🚀 **Developer Productivity**
-Focus on building, not managing. Intelligent prioritization, automatic context loading, and incremental sync when ready.
+## Roadmap
 
-## Proven Results
-
-Teams using this system report:
-- **89% less time** lost to context switching – you'll use `/compact` and `/clear` a LOT less
-- **5-8 parallel tasks** vs 1 previously – editing/testing multiple files at the same time
-- **75% reduction** in bug rates – due to the breaking down features into detailed tasks
-- **Up to 3x faster** feature delivery – based on feature size and complexity
-
-## Example Flow
-
-```bash
-# Start a new feature
-/pm:prd-new memory-system
-
-# Review and refine the PRD...
-
-# Create implementation plan
-/pm:prd-parse memory-system
-
-# Review the epic...
-
-# Break into tasks and push to GitHub
-/pm:epic-oneshot memory-system
-# Creates issues: #1234 (epic), #1235, #1236 (tasks)
-
-# Start development on a task
-/pm:issue-start 1235
-# Agent begins work, maintains local progress
-
-# Sync progress to GitHub
-/pm:issue-sync 1235
-# Updates posted as issue comments
-
-# Check overall status
-/pm:epic-show memory-system
-```
-
-## Get Started Now
-
-### Quick Setup (2 minutes)
-
-1. **Clone this repository into your project**:
-   ```bash
-   cd path/to/your/project/
-   git clone https://github.com/automazeio/ccpm.git .
-   ```
-   > ⚠️ **IMPORTANT**: If you already have a `.claude` directory, clone this repository to a different directory and copy the contents of the cloned `.claude` directory to your project's `.claude` directory.
-
-2. **Initialize the PM system**:
-   ```bash
-   /pm:init
-   ```
-   This command will:
-   - Install GitHub CLI (if needed)
-   - Authenticate with GitHub
-   - Install [gh-sub-issue extension](https://github.com/yahsan2/gh-sub-issue) for proper parent-child relationships
-   - Create required directories
-   - Update .gitignore
-
-3. **Create `CLAUDE.md`** with your repository information
-   ```bash
-   /init include rules from .claude/CLAUDE.md
-   ```
-   > If you already have a `CLAUDE.md` file, run: `/re-init` to update it with important rules from `.claude/CLAUDE.md`.
-
-4. **Prime the system**:
-   ```bash
-   /context:create
-   ```
-
-
-
-### Start Your First Feature
-
-```bash
-/pm:prd-new your-feature-name
-```
-
-Watch as structured planning transforms into shipped code.
-
-## Local vs Remote
-
-| Operation | Local | GitHub |
-|-----------|-------|--------|
-| PRD Creation | ✅ | — |
-| Implementation Planning | ✅ | — |
-| Task Breakdown | ✅ | ✅ (sync) |
-| Execution | ✅ | — |
-| Status Updates | ✅ | ✅ (sync) |
-| Final Deliverables | — | ✅ |
-
-## Technical Notes
-
-### GitHub Integration
-- Uses **gh-sub-issue extension** for proper parent-child relationships
-- Falls back to task lists if extension not installed
-- Epic issues track sub-task completion automatically
-- Labels provide additional organization (`epic:feature`, `task:feature`)
-
-### File Naming Convention
-- Tasks start as `001.md`, `002.md` during decomposition
-- After GitHub sync, renamed to `{issue-id}.md` (e.g., `1234.md`)
-- Makes it easy to navigate: issue #1234 = file `1234.md`
-
-### Design Decisions
-- Intentionally avoids GitHub Projects API complexity
-- All commands operate on local files first for speed
-- Synchronization with GitHub is explicit and controlled
-- Worktrees provide clean git isolation for parallel work
-- GitHub Projects can be added separately for visualization
+- [ ] WASI Preview 2 support
+- [ ] WebAssembly GC support
+- [ ] Advanced debugging features
+- [ ] Performance optimizations
+- [ ] Extended platform support
+- [ ] Integration with popular Java frameworks
 
 ---
 
-## Support This Project
-
-Claude Code PM was developed at [Automaze](https://automaze.io) **for developers who ship, by developers who ship**.
-
-If Claude Code PM helps your team ship better software:
-
-- ⭐ **[Star this repository](https://github.com/your-username/claude-code-pm)** to show your support
-- 🐦 **[Follow @aroussi on X](https://x.com/aroussi)** for updates and tips
-
-
----
-
-> [!TIP]
-> **Ship faster with Automaze.** We partner with founders to bring their vision to life, scale their business, and optimize for success.
-> **[Visit Automaze to book a call with me ›](https://automaze.io)**
+**Built with ❤️ for the Java and WebAssembly communities**
